k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gallery-deployment
  namespace: gallery-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gallery
  template:
    metadata:
      labels:
        app: gallery
    spec:
      serviceAccountName: gallery-sa
      containers:
        - name: gallery-app
          image: DOCKER_IMAGE_PLACEHOLDER
          ports:
            - containerPort: 3001
