k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gallery-service
  namespace: gallery-app
spec:
  selector:
    app: gallery
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
